examples/refs.co
type Thing {
  ref &int
}

fun refs() {
  // let v = 3 ; let r = mut&v // error: mut ref to immut binding
  // var v = 3 ; let r mut&int = &v // error: incompatible types, mut&int and &int
  var v = 3 ; let r mut&int = mut&v ; let p &int = &v // ok, ok
  // let rr = &r // error: referencing reference type mut&int
  // let v2 = *r // ok
  // *p = 4 // error: cannot assign via immutable reference of type &int
  *r = 4
}

fun Thing.refs(mut this) {
  var v = 3
  .ref = &v
}

type Vec2
  x, y int

fun ref_of_ref()
  var x Vec2
  var y = &x
  //var z = mut&y // error: cannot make mutable reference to immutable value
  var z = &y // typeof(z)=&int (not &&int)
  z.x * 2
